<resources>
    <string name="app_name">uTimeTable</string>
    <string name="timeTable">TimeTable</string>
    <string name="assignment">Assignments</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="support">Support</string>
    <string name="aboutUs">About Us</string>
    <string name="others">Others</string>
    <string name="userName">(Placeholder)</string>
    <string name="userEmail">Placeholder@Gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addAssignment">Add New Assignment</string>
    <string name="addClass">Add New Class</string>
    <string name="addHoliday">Add New Holiday</string>
    <string name="classes">Classes</string>
    <string name="inputClass" />
    <string name="addTeacherName">Name of Teacher</string>
    <string name="addTeacherEmail">Add Teacher Email</string>
    <string name="completion">Completion %</string>
    <string name="assignmentName">Name of assignment</string>
    <string name="description">Description</string>
    <string name="descriptionOfAssignment">Description of assignment</string>
    <string name="date">Due Date</string>
    <string name="time">Due time</string>
    <string name="dueDate">Due date (dd-mm-yyyy)</string>
    <string name="dateClass">1</string>
    <string name="day">day</string>
    <string name="leftArrow"><![CDATA[<-]]></string>
    <string name="rightArrow"><![CDATA[->]]></string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="day_5">Day 5</string>
    <string name="day_6">Day 6</string>
    <string name="day_7">Day 7</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
</resources>