<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuTimeTable"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/timeTable"/>

    <item
        android:id="@+id/menuAssignment"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/assignment"/>

    <item
        android:id="@+id/menuClasses"
        android:icon="@drawable/ic_baseline_class_24"
        android:title="@string/classes"/>

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/support"/>

            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/aboutUs"/>

        </menu>

    </item>

</menu>