<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addClass">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/Primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/PrimaryOn" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/addClass"
            android:textColor="@color/PrimaryOn"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextNameOfClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="Name of Class"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editTextTeacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addTeacherName"
        app:layout_constraintStart_toStartOf="@+id/editTextNameOfClass"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameOfClass" />

    <EditText
        android:id="@+id/editTextEmailAddressOfTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/addTeacherEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextTeacherName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTeacherName" />

    <GridLayout
        android:id="@+id/gridLayoutDaySelect"
        android:layout_width="match_parent"
        android:layout_height="509dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressOfTeacher">

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay1Timetable"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/day_1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay2Timetable"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/day_2" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay3Timetable"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/day_3" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay4Timetable"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/day_4" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay5Timetable"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/day_5" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay6Timetable"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/day_6" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ChipDay7Timetable"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/day_7" />

    </GridLayout>

    <Button
        android:id="@+id/buttonAddClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/addClass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--
        Have a radio button to press and if you tick the button it brings up a pannal to set
        a time for that day.

        int for radio button group

        https://www.youtube.com/watch?v=o-HVE_VxyjQ for time input (It seems cool)
        if that takes to much time then I will put in a standerd time input so that
        I can at least hand it in.

        This will be encompassed by a grid layout so that the buttons and time select
         panel are in line.
    -->


</androidx.constraintlayout.widget.ConstraintLayout>